--- a/required_8hpp_source.html
+++ b/required_8hpp_source.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-<title>Boost.RPC: Main Page</title>
+<title>Boost.RPC: /Users/dlarimer/dev/libs/rpc/include/boost/rpc/required.hpp Source File</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link href="search/search.css" rel="stylesheet" type="text/css"/>
 <script type="text/javaScript" src="search/search.js"></script>
@@ -17,9 +17,9 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
 <div class="navigation" id="top">
   <div class="tabs">
     <ul>
-      <li class="current"><a href="index.html"><span>Main&nbsp;Page</span></a></li>
+      <li><a href="index.html"><span>Main&nbsp;Page</span></a></li>
       <li><a href="annotated.html"><span>Classes</span></a></li>
-      <li><a href="files.html"><span>Files</span></a></li>
+      <li class="current"><a href="files.html"><span>Files</span></a></li>
       <li>
         <div id="MSearchBox" class="MSearchBoxInactive">
         <img id="MSearchSelect" src="search/search.png"
@@ -35,9 +35,34 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
       </li>
     </ul>
   </div>
-</div>
-<div class="contents">
-<h1>Boost.RPC Documentation</h1></div>
+  <div class="tabs">
+    <ul>
+      <li><a href="files.html"><span>File&nbsp;List</span></a></li>
+    </ul>
+  </div>
+<h1>/Users/dlarimer/dev/libs/rpc/include/boost/rpc/required.hpp</h1><div class="fragment"><pre class="fragment"><a name="l00001"></a>00001 <span class="preprocessor">#ifndef __BOOST_RPC_REQUIRED_HPP__</span>
+<a name="l00002"></a>00002 <span class="preprocessor"></span><span class="preprocessor">#define __BOOST_RPC_REQUIRED_HPP__</span>
+<a name="l00003"></a>00003 <span class="preprocessor"></span><span class="preprocessor">#include &lt;boost/optional.hpp&gt;</span>
+<a name="l00004"></a>00004 
+<a name="l00005"></a>00005 <span class="keyword">namespace </span>boost { <span class="keyword">namespace </span>rpc { 
+<a name="l00006"></a>00006     <span class="keyword">template</span>&lt;<span class="keyword">typename</span> T&gt;
+<a name="l00007"></a>00007     <span class="keyword">struct </span>required : <span class="keyword">public</span> boost::optional&lt;T&gt;
+<a name="l00008"></a>00008     {
+<a name="l00009"></a>00009         <span class="keyword">typedef</span> boost::optional&lt;T&gt; base;
+<a name="l00010"></a>00010         required(){}
+<a name="l00011"></a>00011         required( <span class="keyword">const</span> T&amp; v )
+<a name="l00012"></a>00012         :boost::optional&lt;T&gt;(v){}
+<a name="l00013"></a>00013 
+<a name="l00014"></a>00014         operator T&amp; ()            { <span class="keywordflow">return</span> **<span class="keyword">this</span>; }
+<a name="l00015"></a>00015         operator const T&amp; ()<span class="keyword">const </span>{ <span class="keywordflow">return</span> **<span class="keyword">this</span>; }
+<a name="l00016"></a>00016         <span class="keyword">using</span> base::operator=;
+<a name="l00017"></a>00017         <span class="keyword">using</span> base::operator*;
+<a name="l00018"></a>00018         <span class="keyword">using</span> base::operator!;
+<a name="l00019"></a>00019     };
+<a name="l00020"></a>00020 
+<a name="l00021"></a>00021 } } <span class="comment">// namespace boost::rpc </span>
+<a name="l00022"></a>00022 <span class="preprocessor">#endif // __BOOST_RPC_REQUIRED_HPP__</span>
+</pre></div></div>
 <!--- window showing the filter options -->
 <div id="MSearchSelectWindow"
      onmouseover="return searchBox.OnSearchSelectShow()"
